# ext-whisper

./: .ext-template.conf  Cargo.toml  Makefile  PLAN.md  README.md  RELEASE.md  THIRD-PARTY-NOTICES.md  about.hbs  build.rs  composer.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/book/: 404.html  index.html  print.html  searchindex.js  toc.html  toc.js
docs/book/getting-started/: installation.html
docs/book/guide/: audio.html  transcription.html
docs/book/reference/: api.html
docs/src/: SUMMARY.md  introduction.md
docs/src/getting-started/: installation.md
docs/src/guide/: audio.md  transcription.md
docs/src/reference/: api.md
examples/: transcribe.php
src/: error.rs  lib.rs  model.rs  transcription.rs  wav.rs
stubs/: whisper.stubs.php
tests/phpt/: 001-construct-throws.phpt  002-exception-hierarchy.phpt  003-load-missing-file.phpt  004-transcribe-jfk.phpt  005-audio-validation.phpt  006-close-semantics.phpt  007-option-validation.phpt
